fix calculator container from cutting off as dashboard extends beyond 100vh

--- a/src/styles/boardFootCalculator.module.scss
+++ b/src/styles/boardFootCalculator.module.scss
@@ -2,7 +2,7 @@
 @use 'mixins';
 
 .container {
-	height: 100vh;
+	height: 100%;
 	overflow-y: auto;
 	background-color: variables.$background-color;
 	color: variables.$primary-blue;
